--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "local": "webpack -p --progress --config production.webpack.config.js && node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,8 +26,8 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-react": "^6.16.0",
-    "webpack": "^1.14.0",
-    "webpack-cli": "^2.0.12",
+    "webpack": "^1.15.0",
+    "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^1.16.2"
   }
 }
